# dbk

./: .gitignore  pyproject.toml  tasks.sh
dbk/background/: __init__.py  jobs.py  worker_pool.py
dbk/cli/: __init__.py  __main__.py  _app.py  book.py  database.py  sync.py
dbk/core/: __init__.py
dbk/core/models/: __init__.py  _models.py
dbk/core/persist/: __init__.py
dbk/core/providers/: __init__.py  _providers.py  bofa.py
dbk/core/rules/: __init__.py  _compile.py  _dsl.py  _engine.py  _parsers.py  ruleset.yaml
dbk/core/sync/: __init__.py
dbk/db/: __init__.py
dbk/errors/: __init__.py
dbk/logging/: __init__.py
dbk/tui/: __init__.py  __main__.py  error_handling.py  settings.py  styles.tcss
dbk/tui/models/: account.py  book.py  connection.py  modals.py  transactions.py
dbk/tui/widgets/: _util.py  account.py  book.py  connection.py  modals.py  nav.py  routing.py  sidebar.py  transactions.py
env/: dev
rulesets/: subscriptions.yaml
tests/integration/providers/: test_bofa.py
tests/unit/rules/: test_compilation.py  test_references.py
